Migration des organes en beans Spring (SmartLifecycle par phases) et suppression de la classe Robot